--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p>hello world<p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Bookmarks-CodeWithHarry</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+</head>
+<body>
+    <h1>My Bookmarks</h1>
+    <h2>Main Bookmarks</h2>
+    <h3>Main Bookmarks</h3>
+    <h4>Main Bookmarks</h4>
+    <h5>Main Bookmarks</h5>
+    <h6>Main Bookmarks</h6>
+
+    <p style="background-color:thistle;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente velit voluptatum quam dolore sit enim modi rerum nobis, saepe commodi tempora assumenda atque.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione libero unde natus nihil, illo ex ab nulla quasi amet officia cum itaque exercitationem nemo obcaecati nesciunt cupiditate vero tempora ea fugit. Similique illum saepe, excepturi inventore, quidem provident sit facere ipsam a ea dignissimos totam ipsum in quos sed voluptas molestias, cum sint atque eaque velit pariatur perferendis facilis! Voluptatem maxime nulla vero. Repellendus dolorum debitis molestiae veniam corporis vitae nobis aperiam, possimus aspernatur error. Vel quis odio ad mollitia! Debitis expedita animi, officiis perferendis quidem voluptatum iure repellendus eveniet dolore in, maxime qui adipisci tempora illo! Laboriosam, iure deserunt!</p>
+</body>
+</html>
